fixed/animation problem + overflow

--- a/src/App.css
+++ b/src/App.css
@@ -50,6 +50,7 @@ html {
     font-family: 'Hind', sans-serif;
     color: rgba(48, 69, 92, 0.8);
     background-color: #f9f9f9;
+    overflow: hidden;
 }
 
 body {
@@ -136,17 +137,29 @@ ul li {
 
 }
 
-ul li:nth-of-type(1) {
+/* ul li:nth-of-type(1) {
     animation-delay: 0.5s;
 }
 
-/* ul li:nth-of-type(2) {
+ul li:nth-of-type(2) {
     animation-delay: 0.75s;
 }
 
 ul li:nth-of-type(3) {
     animation-delay: 1s;
 } */
+
+.accordion-item-1 {
+    animation-delay: 0.5s;
+}
+
+.accordion-item-2 {
+    animation-delay: 0.75s;
+}
+
+.accordion-item-3 {
+    animation-delay: 1s;
+}
 
 /* ul li:last-of-type {
     padding-bottom: 0;
